# autodoc_inherit_overload

./: README.md  pyproject.toml
sphinxcontrib/: autodoc_inherit_overload.py
